[gd_scene load_steps=7 format=3 uid="uid://c28pjcpab8hlu"]

[ext_resource type="Script" path="res://actors/scan_beacon.gd" id="1_e48kn"]
[ext_resource type="Texture2D" uid="uid://mge2jh51j1g6" path="res://sprites/cat-drone.png" id="1_xah2f"]
[ext_resource type="PackedScene" uid="uid://btggehvw6uim4" path="res://actors/targeting_laser.tscn" id="3_wb6oj"]
[ext_resource type="AudioStream" uid="uid://w473v2irqobt" path="res://sounds/hit/Alarm_30.wav" id="4_4xxju"]
[ext_resource type="AudioStream" uid="uid://dpc2tfysijpxd" path="res://sounds/hit/Alarm_32.wav" id="5_p2aj8"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_fopjp"]
streams_count = 2
stream_0/stream = ExtResource("4_4xxju")
stream_0/weight = 1.0
stream_1/stream = ExtResource("5_p2aj8")
stream_1/weight = 1.0

[node name="ScanBeacon" type="Node2D"]
script = ExtResource("1_e48kn")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
texture = ExtResource("1_xah2f")

[node name="TargetingLaser" parent="." instance=ExtResource("3_wb6oj")]
position = Vector2(9.64, 0)
beam_width = 5.0

[node name="Indicator" parent="TargetingLaser" instance=ExtResource("3_wb6oj")]
collision_mask = 4
beam_width = 5.0
color = Color(0.509804, 1, 0.278431, 0.631373)

[node name="RailgunTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Alarm" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_fopjp")
volume_db = -10.0
autoplay = true
max_distance = 5000.0
attenuation = 0.148651

[connection signal="timeout" from="RailgunTimer" to="." method="_on_railgun_timer_timeout"]
